--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,105 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  overflow: hidden;
+  margin: 0;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.square {
+  background: #fff;
+  border: 1px solid #5ba4d7;
+  float: left;
+  font-size: xxx-large;
+  font-weight: bold;
+  line-height: 34px;
+  height: auto;
+  aspect-ratio: 1/1;
+  padding: 0;
   text-align: center;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.square.on {
+  background: #f8d71c;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.square:hover {
+  background-color: #c0d5e8;
+}
+
+.square.winning {
+  background-color: yellow;
+}
+
+.board {
+  aspect-ratio: 1 / 1;
+  border-collapse: collapse;
+}
+
+.board-row {
+  display: flex;
+  height: calc(100% / 5);
+}
+
+header {
+  height: 5%;
+  padding: 10px;
+  color: white;
+  background-color: #5ba4d7;
+  text-align: center;
+  font-size: x-large;
+}
+
+.game {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+}
+
+.game-board {
+  aspect-ratio: 1/1;
+  padding: 10% 15%;
+}
+
+.game-info {
+  text-align: center;
+  padding: 1%;
+}
+
+.game-info-button {
+  color: #5ba4d7;
+  padding: 15px 30px;
+  background-color: #fff;
+  border: solid;
+  border-color: #5ba4d7;
+  border-radius: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+.game-info-button.current-move {
+  color: #f8d71c;
+  animation: text-round 2s infinite;
+}
+
+@keyframes text-round {
+  50% {
+    /* 待機時間 */
+    transform: rotateX(0);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: rotateX(360deg);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.game-info-button:hover {
+  color: #fff;
+  background-color: #5ba4d7;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.container {
+  height: 95%;
+  width: 100%;
+  display: flex;
 }
