--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,7 @@ body {
   background: #fff;
   border: 1px solid #5ba4d7;
   float: left;
-  font-size: xxx-large;
-  font-weight: bold;
-  line-height: 34px;
-  height: auto;
   aspect-ratio: 1/1;
-  padding: 0;
-  text-align: center;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 .square.on {
@@ -26,12 +19,9 @@ body {
   background-color: #c0d5e8;
 }
 
-.square.winning {
-  background-color: yellow;
-}
-
 .board {
   aspect-ratio: 1 / 1;
+  width: 30%;
   border-collapse: collapse;
 }
 
@@ -42,6 +32,7 @@ body {
 
 header {
   height: 10%;
+  width: 100%;
   color: white;
   background-color: #5ba4d7;
   display: flex;
@@ -50,10 +41,20 @@ header {
   font-size: x-large;
 }
 
-.container {
+.timer {
+  margin: 0 10%;
+}
+
+.counter {
+  margin: 0 10%;
+}
+
+.game-board {
   height: 90%;
   width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .game {
@@ -62,7 +63,27 @@ header {
   height: 100vh;
 }
 
-.game-board {
-  aspect-ratio: 1/1;
-  padding: 10% 15%;
+.stopwatch {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  height: 20%
+}
+
+.stopwatch button {
+  height: 50%;
+  border-radius: 10px;
+  margin: 5%;
+  color: white;
+  background-color: #5ba4d7;
+  border: none;
+  font-size: large;
+}
+
+.stopwatch button:hover {
+  background-color: #3d95d4;
+}
+
+.stopwatch button:active{
+  background-color: #286a99;
 }
