--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,38 @@ header {
   background-color: #3d95d4;
 }
 
-.stopwatch button:active{
+.stopwatch button:active {
   background-color: #286a99;
+}
+
+.clear {
+  position: fixed;
+  width: 100%;
+  height: 60%;
+  font-size: xxx-large;
+  background-color: #5ba4d7;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.clear button {
+  height: 10%;
+  width: 10%;
+  border-radius: 10px;
+  margin: 5%;
+  background-color: white;
+  color: #5ba4d7;
+  border: none;
+  font-size: large;
+}
+
+.clear button:hover {
+  background-color: rgb(227, 225, 225);
+}
+
+.clear button:active {
+  background-color: rgb(168, 167, 167);
 }
