--- a/src/App.css
+++ b/src/App.css
@@ -115,24 +115,39 @@ header {
   position: fixed;
   width: 100%;
   height: 60%;
-  font-size: xxx-large;
   background-color: #5ba4d7;
-  color: #fff;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+.clear p {
+  animation: rotation 2s;
+  font-size: min(3rem);
+  white-space: nowrap;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+    font-size: 10rem;
+  }
+  100% {
+    transform: rotate(720deg);
+    font-size: 3rem;
+  }
+}
+ 
 .clear button {
   height: 10%;
   width: 10%;
   border-radius: 10px;
-  margin: 5%;
   background-color: white;
   color: #5ba4d7;
   border: none;
-  font-size: large;
+  font-size: 1rem;
 }
 
 .clear button:hover {
