--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -1,32 +1,127 @@
-.menu {
+.menu-container {
   width: 20%;
   height: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  position: relative;
 }
 
-.menu button {
-  height: 10%;
+#menu {/*親要素*/
+  width: 70%;
+  aspect-ratio: 1 / 1;
+  position: absolute;
+  left: 15%;
+  top: 30%;
+  list-style: none;
+  font-size: 200%;
+}
+
+.menu-button {/*スタイル*/
   width: 100%;
-  border-radius: 10px;
-  color: #5ba4d7;
-  background-color: #fff;
-  border: 2px solid #5ba4d7;
-  font-size: x-large;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-}
-
-.menu button:hover {
+  align-items: center;
+  justify-content: center;
   color: #fff;
-  background-color: #3d95d4;
-}
-
-.menu button:active {
-  background-color: #286a99;
-}
-
-.mode-button:disabled {
-  color: #ffffff;
+  left: 0;
+  top: 0;
+  border-radius: 50%;
   background-color: #5ba4d7;
+  background-size: 100%;
+  overflow: hidden;
+  z-index: -1;
+  transition: 0.5s;
+  opacity: 0;
+  font-size: 3vw;
+}
+
+.menu-text {
+  margin-top: 30%;
+  line-height: 140%;
+}
+
+.back {
+  font-size: 2vw;
+}
+ 
+/* not -> 含まれないものを指定　first-of-type -> その中で１番目　last-of-type -> その中で最後 */
+/*開閉用*/
+#menu:not(:target) a:first-of-type,
+#menu:target a:last-of-type {
+  opacity: 1;
+  z-index: 1;
+}
+ 
+.menu-item {/*メニューのスタイル*/
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  left: 25%;
+  top: 25%;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #5ba4d7;
+  transform: translate(0px, 0px);
+  transition: 0.3s;
+  z-index: -2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2vw;
+}
+ 
+.menu-item:hover {
+  opacity: 0.5;
+}
+
+.visible {
+  z-index: 1;
+}
+
+.invisible {
+  z-index: -1;
+}
+
+/*位置調整*/
+#menu:target .menu-item:nth-child(3) {
+  transform: rotate(0deg) translateY(-12vw) rotate(0deg);
+  transition-delay: 0s;
+}
+
+#menu:target .menu-item:nth-child(4) {
+  transform: rotate(45deg) translateY(-12vw) rotate(-45deg);
+  transition-delay: 0.1s;
+}
+ 
+#menu:target .menu-item:nth-child(5) {
+  transform: rotate(90deg) translateY(-12vw) rotate(-90deg);
+  transition-delay: 0.2s;
+}
+ 
+#menu:target .menu-item:nth-child(6) {
+  transform: rotate(135deg) translateY(-12vw) rotate(-135deg);
+  transition-delay: 0.3s;
+}
+
+#menu:target .menu-item:nth-child(7) {
+  transform: rotate(180deg) translateY(-12vw) rotate(-180deg);
+  transition-delay: 0.4s;
+}
+
+#menu:target .menu-item:nth-child(8) {
+  transform: rotate(225deg) translateY(-12vw) rotate(-225deg);
+  transition-delay: 0.5s;
+}
+
+#menu:target .menu-item:nth-child(9) {
+  transform: rotate(270deg) translateY(-12vw) rotate(-270deg);
+  transition-delay: 0.6s;
+}
+
+#menu:target .menu-item:nth-child(10) {
+  transform: rotate(315deg) translateY(-12vw) rotate(-315deg);
+  transition-delay: 0.7s;
 }
