--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -38,6 +38,12 @@
   font-size: 3vw;
 }
 
+.menu-button:hover {
+  background-color: #fff;
+  color: #5ba4d7;
+  border: 2px solid #5ba4d7;
+}
+
 .menu-text {
   margin-top: 30%;
   line-height: 140%;
@@ -72,9 +78,11 @@
   justify-content: center;
   font-size: 2vw;
 }
- 
+
 .menu-item:hover {
-  opacity: 0.5;
+  background-color: #fff;
+  color: #5ba4d7;
+  border: 2px solid #5ba4d7;
 }
 
 .visible {
@@ -88,40 +96,40 @@
 /*位置調整*/
 #menu:target .menu-item:nth-child(3) {
   transform: rotate(0deg) translateY(-12vw) rotate(0deg);
-  transition-delay: 0s;
+  /* transition-delay: 0s; */
 }
 
 #menu:target .menu-item:nth-child(4) {
   transform: rotate(45deg) translateY(-12vw) rotate(-45deg);
-  transition-delay: 0.1s;
+  /* transition-delay: 0.1s; */
 }
  
 #menu:target .menu-item:nth-child(5) {
   transform: rotate(90deg) translateY(-12vw) rotate(-90deg);
-  transition-delay: 0.2s;
+  /* transition-delay: 0.2s; */
 }
  
 #menu:target .menu-item:nth-child(6) {
   transform: rotate(135deg) translateY(-12vw) rotate(-135deg);
-  transition-delay: 0.3s;
+  /* transition-delay: 0.3s; */
 }
 
 #menu:target .menu-item:nth-child(7) {
   transform: rotate(180deg) translateY(-12vw) rotate(-180deg);
-  transition-delay: 0.4s;
+  /* transition-delay: 0.4s; */
 }
 
 #menu:target .menu-item:nth-child(8) {
   transform: rotate(225deg) translateY(-12vw) rotate(-225deg);
-  transition-delay: 0.5s;
+  /* transition-delay: 0.5s; */
 }
 
 #menu:target .menu-item:nth-child(9) {
   transform: rotate(270deg) translateY(-12vw) rotate(-270deg);
-  transition-delay: 0.6s;
+  /* transition-delay: 0.6s; */
 }
 
 #menu:target .menu-item:nth-child(10) {
   transform: rotate(315deg) translateY(-12vw) rotate(-315deg);
-  transition-delay: 0.7s;
+  /* transition-delay: 0.7s; */
 }
