--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -10,8 +10,9 @@
   width: 70%;
   aspect-ratio: 1 / 1;
   position: absolute;
-  left: 15%;
-  top: 30%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   list-style: none;
   font-size: 200%;
 }
