--- a/src/Components/MenuItem/MenuItem.css
+++ b/src/Components/MenuItem/MenuItem.css
@@ -17,16 +17,26 @@
   font-size: 2vw;
 }
 
-.menu-item:hover {
-  background-color: #fff;
-  color: #5ba4d7;
-  border: 2px solid #5ba4d7;
-}
-
 .visible {
   z-index: 1;
 }
 
 .invisible {
   z-index: -1;
+}
+
+.menu-item button {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2vw;
+}
+
+.menu-item button:hover {
+  background-color: #fff;
+  color: #5ba4d7;
+  border: 2px solid #5ba4d7;
 }
