--- a/src/Components/MenuItem/MenuItem.css
+++ b/src/Components/MenuItem/MenuItem.css
@@ -35,7 +35,7 @@
   font-size: 2vw;
 }
 
-.menu-item button:hover {
+.menu-item button:not(:disabled):hover {
   background-color: #fff;
   color: #5ba4d7;
   border: 2px solid #5ba4d7;
