--- a/src/Components/Square/Square.css
+++ b/src/Components/Square/Square.css
@@ -1,35 +1,33 @@
 .square {
-  background-color: #fff;
   border: 1px solid #5ba4d7;
   float: left;
   aspect-ratio: 1/1;
-  animation: fadeOut 0.3s linear forwards;
+  animation: fadeOut .3s linear forwards;
 }
 
 .off {
   background-color: #fff;
-  animation: fadeOut 0.3s linear forwards;
+  animation: fadeOut .3s;
 }
 
-@keyframes fadeOut {
-  0% {
+@keyframes fadeOut{
+  0%{
   }
-  100% {
+  100%{
     background-color: #fff;
   }
 }
 
 .on {
   background-color: #f8d71c;
-  animation: fadeIn 0.3s;
+  animation: fadeIn .3s;
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
+@keyframes fadeIn{
+  0%{
   }
-  100% {
-    opacity: 1;
+  100%{
+    background-color: #f8d71c;
   }
 }
 
