--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,12 +1,12 @@
 header {
-  height: 10%;
+  height: 15%;
   width: 100%;
   color: white;
   background-color: #5ba4d7;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: x-large;
+  font-size: xx-large;
 }
 
 .timer {
