--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,7 +6,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: xx-large;
+  font-size: 3vw;
 }
 
 .timer {
